<resources>
    <string name="app_name">The Movie</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="something_wrong">Something wrong</string>
    <string name="overview">Overview</string>
    <string name="empty_data">Empty Data</string>
    <string name="vote_average">Vote Average</string>
    <string name="_9_2">9.2</string>
    <string name="vote_count">Vote Count</string>
    <string name="_2454">2454</string>
    <string name="popularity">Popularity</string>
    <string name="_1453_442">1453.442</string>
    <string name="dummy_text">"A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"</string>
</resources>